--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -18,8 +18,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vee-validate/zod": "^4.11.1",
+    "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
