--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vee-validate/zod": "^4.11.1",
+    "netlify-cli": "^16.5.1",
     "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
